<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

    <TextView
            android:text="@string/add_items_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemInstructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/itemName"
            android:hint="@string/add_item_name_hint"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="70dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/itemPrice"
            android:hint="@string/add_item_price_hint"
            android:layout_below="@+id/itemName"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp" />

    <TextView
            android:text="@string/add_item_who_paid"
            android:id="@+id/personPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/itemPrice"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

    <Button
            android:text="@string/add_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addItem"
            android:onClick="addItem"
            android:layout_gravity="end"
            android:layout_below="@+id/scroller"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/actionButton"
            android:textColor="@color/white"/>

    <HorizontalScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/personPaid"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/radioButtonHolder">

        <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
            android:text="@string/add_items_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemList"
            android:layout_below="@+id/addItem"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:textStyle="italic" />

    <Button
            android:text="@string/calculate_bill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculate"
            android:layout_gravity="end"
            android:onClick="calculate"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>

</RelativeLayout>