<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="csc201.billsplitter.MainActivity">

    <TextView
            android:text="@string/add_people_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainInstructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mainInstructions"
                 android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp">

            <EditText
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:layout_column="0"
                    android:id="@+id/names"
                    android:hint="@string/enter_name"
                    android:selectAllOnFocus="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

            <EditText
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:id="@+id/emails"
                    android:hint="@string/enter_email"
                    android:selectAllOnFocus="true"
                    android:inputType="textEmailAddress"/>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:text="@string/add_person_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/add"
                    android:visibility="visible"
                    android:layout_marginTop="10dp"
                    android:onClick="addPerson"
                    android:backgroundTint="@color/actionButton"
                    android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <TextView
            android:text="@string/add_people_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/people"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/tableLayout"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
            android:textStyle="italic" />

    <Button
            android:text="@string/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/next"
            android:onClick="next"/>

</RelativeLayout>
